--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -17,7 +17,7 @@ Volleyball League is an open source sports platform that brings everything neces
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="7.3.2" />
+    <PackageReference Include="EPPlus" Version="7.4.1" />
     <PackageReference Include="NLog" Version="5.3.4" />
     <PackageReference Include="NuGetizer" Version="1.2.3">
       <PrivateAssets>all</PrivateAssets>
@@ -28,10 +28,11 @@ Volleyball League is an open source sports platform that brings everything neces
     <PackageReference Include="PuppeteerSharp" Version="20.0.2" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
     <!-- Replace original Ical.Net v4.2.0 with more up-to-date fork -->
-    <PackageReference Include="laget.Ical.Net" Version="4.3.9" />
-    <PackageReference Include="libphonenumber-csharp" Version="8.13.46" />
+    <PackageReference Include="Ical.Net" Version="4.3.1" />
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.47" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.14" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="YAXLib" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
